--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "drupal/layout_builder_modal": "^1.0",
         "drupal/layout_builder_restrictions": "^2.0",
         "drupal/linkit": "^6.0.0-beta2",
+        "drupal/mailsystem": "^4.3",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
         "drupal/noreferrer": "^1.0",
@@ -73,6 +74,7 @@
         "drupal/search_api_exclude_entity": "^1.0",
         "drupal/search_api_page": "^1.0@beta",
         "drupal/simple_sitemap": "^3.0",
+        "drupal/swiftmailer": "^2.2",
         "drupal/taxonomy_machine_name": "^1.0@beta",
         "drupal/view_unpublished": "^1.0",
         "drupal/webform": "^6.0",
