--- a/config/sync/core.entity_form_display.profile.organization.default.yml
+++ b/config/sync/core.entity_form_display.profile.organization.default.yml
@@ -3,13 +3,14 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.profile.organization.field_orgamization_overview
     - field.field.profile.organization.field_organization_address
     - field.field.profile.organization.field_organization_description
     - field.field.profile.organization.field_organization_email
     - field.field.profile.organization.field_organization_graphic
     - field.field.profile.organization.field_organization_logo
+    - field.field.profile.organization.field_organization_overview
     - field.field.profile.organization.field_organization_phone
+    - field.field.profile.organization.field_organization_top_image
     - field.field.profile.organization.field_organization_website
     - image.style.thumbnail
     - profile.type.organization
@@ -19,6 +20,7 @@ dependencies:
     - field_group
     - image
     - link
+    - paragraphs
     - path
     - telephone
     - text
@@ -32,7 +34,7 @@ third_party_settings:
       label: 'Yderligere kontaktinformation'
       region: content
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: details
       format_settings:
         classes: ''
@@ -46,21 +48,15 @@ targetEntityType: profile
 bundle: organization
 mode: default
 content:
-  field_orgamization_overview:
-    type: overview_filter_widget
-    weight: 31
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_organization_address:
     type: address_default
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_organization_description:
     type: text_textarea
-    weight: 27
+    weight: 4
     region: content
     settings:
       rows: 5
@@ -76,7 +72,7 @@ content:
     third_party_settings: {  }
   field_organization_graphic:
     type: image_image
-    weight: 28
+    weight: 5
     region: content
     settings:
       progress_indicator: throbber
@@ -84,11 +80,17 @@ content:
     third_party_settings: {  }
   field_organization_logo:
     type: image_image
-    weight: 26
+    weight: 3
     region: content
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_organization_overview:
+    type: overview_filter_widget
+    weight: 6
+    region: content
+    settings: {  }
     third_party_settings: {  }
   field_organization_phone:
     type: telephone_default
@@ -96,6 +98,24 @@ content:
     region: content
     settings:
       placeholder: ''
+    third_party_settings: {  }
+  field_organization_top_image:
+    type: paragraphs
+    weight: 0
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_organization_website:
     type: link_default
@@ -107,7 +127,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
