--- a/config/sync/core.entity_view_display.profile.organization.default.yml
+++ b/config/sync/core.entity_view_display.profile.organization.default.yml
@@ -3,20 +3,22 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.profile.organization.field_orgamization_overview
     - field.field.profile.organization.field_organization_address
     - field.field.profile.organization.field_organization_description
     - field.field.profile.organization.field_organization_email
     - field.field.profile.organization.field_organization_graphic
     - field.field.profile.organization.field_organization_logo
+    - field.field.profile.organization.field_organization_overview
     - field.field.profile.organization.field_organization_phone
+    - field.field.profile.organization.field_organization_top_image
     - field.field.profile.organization.field_organization_website
     - profile.type.organization
   module:
     - address
+    - entity_reference_revisions
     - image
     - link
-    - sis_overview
+    - sis_organization
     - telephone
     - text
 id: profile.organization.default
@@ -24,34 +26,26 @@ targetEntityType: profile
 bundle: organization
 mode: default
 content:
-  field_orgamization_overview:
-    type: organization_overview_formatter
-    label: hidden
-    settings:
-      view_mode: teaser
-    third_party_settings: {  }
-    weight: 8
-    region: content
   field_organization_address:
     type: address_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
   field_organization_description:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 6
+    weight: 5
     region: content
   field_organization_email:
     type: basic_string
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_organization_graphic:
     type: image
@@ -69,7 +63,15 @@ content:
       image_link: ''
       image_style: ''
     third_party_settings: {  }
-    weight: 5
+    weight: 4
+    region: content
+  field_organization_overview:
+    type: organization_overview_formatter
+    label: hidden
+    settings:
+      view_mode: teaser
+    third_party_settings: {  }
+    weight: 9
     region: content
   field_organization_phone:
     type: telephone_link
@@ -77,7 +79,16 @@ content:
     settings:
       title: ''
     third_party_settings: {  }
-    weight: 4
+    weight: 3
+    region: content
+  field_organization_top_image:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 8
     region: content
   field_organization_website:
     type: link
@@ -89,7 +100,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
 hidden:
   search_api_excerpt: true
