--- a/config/sync/workbench_email.workbench_email_template.article_submitted.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_submitted.yml
@@ -1,19 +1,24 @@
 uuid: d1094839-14f0-49b9-8e2f-cd0f19d665f6
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - user.role.editor
+    - user.role.webmaster
 id: article_submitted
 label: 'Artikel indsendt'
 subject: 'Ny artikel: [node:title] '
 recipient_types:
-  fixed_email:
-    id: fixed_email
+  roles_with_access:
+    id: roles_with_access
     provider: workbench_email
     status: true
     settings:
-      recipients: pve@novicell.dk
+      roles:
+        editor: editor
+        webmaster: webmaster
 bundles: {  }
 body:
-  value: 'Læs artiklen [node:url]'
+  value: "En artikel afventer godkendelse\r\n\r\nSe artiklen [node:url]"
   format: plain_text
 replyTo: ''
