SIS2-97: Styling and theming profile page

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -326,6 +326,12 @@ overview-form:
     - sis/accordion
     - sis/pager-full
 
+profile:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/profile.css: {}
+
 search-page:
   version: VERSION
   css:
