--- a/config/sync/core.entity_view_display.profile.organization.default.yml
+++ b/config/sync/core.entity_view_display.profile.organization.default.yml
@@ -12,12 +12,13 @@ dependencies:
     - field.field.profile.organization.field_organization_phone
     - field.field.profile.organization.field_organization_website
     - profile.type.organization
+    - responsive_image.styles.wide
   module:
     - address
+    - entity_overview
     - image
     - link
-    - sis_overview
-    - telephone
+    - responsive_image
     - text
 id: profile.organization.default
 targetEntityType: profile
@@ -25,7 +26,7 @@ bundle: organization
 mode: default
 content:
   field_orgamization_overview:
-    type: organization_overview_formatter
+    type: overview_list
     label: hidden
     settings:
       view_mode: teaser
@@ -54,11 +55,11 @@ content:
     weight: 2
     region: content
   field_organization_graphic:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
+      responsive_image_style: wide
       image_link: ''
-      image_style: ''
     third_party_settings: {  }
     weight: 7
     region: content
@@ -72,10 +73,10 @@ content:
     weight: 5
     region: content
   field_organization_phone:
-    type: telephone_link
+    type: string
     label: hidden
     settings:
-      title: ''
+      link_to_entity: false
     third_party_settings: {  }
     weight: 4
     region: content
