Removed wrongly spelled organization overview field

--- a/config/sync/core.entity_view_display.profile.organization.list.yml
+++ b/config/sync/core.entity_view_display.profile.organization.list.yml
@@ -52,6 +52,7 @@ content:
     weight: 1
     region: content
 hidden:
+  field_orgamization_overview: true
   field_organization_email: true
   field_organization_graphic: true
   field_organization_overview: true
