--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -91,6 +91,7 @@ module:
   rdf: 0
   redirect: 0
   redis: 0
+  relewise: 0
   responsive_image: 0
   role_delegation: 0
   scheduled_transitions: 0
@@ -105,6 +106,7 @@ module:
   sis_lexicon: 0
   sis_organization: 0
   sis_overview: 0
+  sis_relewise: 0
   status_feed: 0
   styles: 0
   swiftmailer: 0
