--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,7 @@
         "drupal/redirect": "^1.0",
         "drupal/redis": "^1.5",
         "drupal/role_delegation": "^1.1",
+        "drupal/role_theme_switcher": "^1.1",
         "drupal/rules": "^3.0@alpha",
         "drupal/scheduled_transitions": "^2.0",
         "drupal/search_api": "^1.0",
