--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/package.json
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/package.json
@@ -93,6 +93,7 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "@tarekraafat/autocomplete.js": "^10.2.7",
     "body-scroll-lock": "3.1.5",
     "flickity": "^2.2.2",
     "flickity-as-nav-for": "^2.0.1",
