--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -271,6 +271,8 @@ header:
   css:
     theme:
       dist/components/css/components/03-organisms/header.css: {}
+  dependencies:
+    - sis/search-autocomplete
 
 hero:
   version: VERSION
@@ -369,3 +371,11 @@ page:
   css:
     theme:
       dist/components/css/components/03-organisms/page.css: {}
+
+search-autocomplete:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/search-autocomplete.css: {}
+  js:
+    dist/components/js/search-autocomplete.js: {}
