SIS2-103: Added read-more library js + css files

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -190,6 +190,14 @@ overview-searchfield:
     theme:
       dist/components/css/components/02-molecules/overview-searchfield.css: {}
 
+read-more:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/read-more.css: {}
+  js:
+    dist/components/js/read-more.js: {}
+
 related-articles:
   version: VERSION
   css:
