SSI2-198:Seasonal wheel layout blog + library

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -334,6 +334,16 @@ profile:
     theme:
       dist/components/css/components/03-organisms/profile.css: {}
 
+seasonal-wheel:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/seasonal-wheel.css: {}
+  js:
+    dist/components/js/seasonal-wheel.js: {}
+  dependencies:
+    - sis/vue-js
+
 search-page:
   version: VERSION
   css:
@@ -379,3 +389,7 @@ search-autocomplete:
       dist/components/css/components/02-molecules/search-autocomplete.css: {}
   js:
     dist/components/js/search-autocomplete.js: {}
+
+vue-js:
+  js:
+    https://cdn.jsdelivr.net/npm/vue/dist/vue.js: { type: external }
