--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
     - field.field.node.article.field_article_categories
+    - field.field.node.article.field_article_months
     - field.field.node.article.field_article_type
     - field.field.node.article.field_class
     - field.field.node.article.field_colophon
@@ -86,6 +87,7 @@ content:
     region: content
 hidden:
   body: true
+  field_article_months: true
   field_class: true
   field_colophon: true
   field_colophon_author: true
