--- a/config/sync/core.entity_view_display.profile.organization.default.yml
+++ b/config/sync/core.entity_view_display.profile.organization.default.yml
@@ -64,6 +64,8 @@ content:
     settings:
       image_link: ''
       image_style: ''
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 4
     region: content
@@ -105,4 +107,5 @@ content:
     weight: 2
     region: content
 hidden:
+  field_orgamization_overview: true
   search_api_excerpt: true
