--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -103,6 +103,7 @@ module:
   sis_organization: 0
   sis_overview: 0
   sis_relewise: 0
+  sis_season_wheel: 0
   status_feed: 0
   styles: 0
   swiftmailer: 0
