--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
@@ -22,12 +22,13 @@ regions:
   footerbottom: Footer bottom
   burgermenu: Burgermenu
 
-component-libraries:
-  reusable-component:
-    paths:
-      - assets/components/twig/01-particles
-      - assets/components/twig/02-molecules
-      - assets/components/twig/03-organisms
+components:
+  namespaces:
+    reusable-component:
+      paths:
+        - assets/components/twig/01-particles
+        - assets/components/twig/02-molecules
+        - assets/components/twig/03-organisms
 
 interface translation project: sis
 interface translation server pattern: sites/skoven-i-skolen.dk/themes/custom/sis/translations/%language.po
