SIS2-143: Added expand functionality to form facets with more then 4 options

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -332,6 +332,8 @@ overview-form:
   css:
     theme:
       dist/components/css/components/03-organisms/overview-form.css: {}
+  js:
+    dist/components/js/overview-form.js: {}
   dependencies:
     - sis/accordion
     - sis/pager-full
