SIS2-87: Added endpoint for getting an random article

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_season_wheel/sis_season_wheel.routing.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_season_wheel/sis_season_wheel.routing.yml
@@ -5,3 +5,11 @@ sis.season_wheel.data:
   methods:  [GET]
   requirements:
     _access: 'TRUE'
+
+sis.season_wheel.random.data:
+  path: sis/season-wheel/get/random/{month}
+  defaults:
+    _controller: '\Drupal\sis_season_wheel\Controller\SeasonWheelController::getRandom'
+  methods:  [GET]
+  requirements:
+    _access: 'TRUE'
