Styling og term pages

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -308,6 +308,9 @@ inspiration-overview:
   css:
     theme:
       dist/components/css/components/03-organisms/inspiration-overview.css: {}
+  dependencies:
+    - sis/breadcrumb
+    - sis/pager
 
 organization-overview:
   version: VERSION
