SIS2-77: Added styling of newspage

--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -4,32 +4,36 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
+    - field.field.node.news.content_hierarchy
     - field.field.node.news.field_description
+    - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
     - field.field.node.news.field_header
     - field.field.node.news.field_hide_breadcrumb
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_inspiration
     - field.field.node.news.layout_builder__layout
     - node.type.news
-    - workflows.workflow.editorial
   module:
+    - content_hierarchy
     - content_moderation
     - field_group
     - media_library
     - metatag
     - paragraphs_asymmetric_translation_widgets
     - path
+    - text
 third_party_settings:
   field_group:
     group_page_header:
       children:
         - field_header
       label: 'Page header'
-      region: content
+      region: hidden
       parent_name: ''
-      weight: 5
+      weight: 24
       format_type: fieldset
       format_settings:
         classes: ''
@@ -44,7 +48,7 @@ third_party_settings:
       label: Sideindstillinger
       region: content
       parent_name: ''
-      weight: 4
+      weight: 2
       format_type: details_sidebar
       format_settings:
         classes: ''
@@ -53,6 +57,68 @@ third_party_settings:
         description: ''
         required_fields: true
         weight: 0
+    group_sidebar:
+      children:
+        - group_lists
+        - group_inspiration
+        - group_fact_boxes
+      label: Sidebar
+      region: content
+      parent_name: ''
+      weight: 14
+      format_type: tabs
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        direction: horizontal
+        width_breakpoint: 640
+    group_inspiration:
+      children:
+        - field_news_inspiration
+      label: Inspiration
+      region: content
+      parent_name: group_sidebar
+      weight: 24
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_fact_boxes:
+      children:
+        - field_factboxes
+      label: Faktabokse
+      region: content
+      parent_name: group_sidebar
+      weight: 25
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_lists:
+      children:
+        - field_description
+        - field_list_media
+      label: Listevisning
+      region: content
+      parent_name: group_sidebar
+      weight: 22
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
 _core:
   default_config_hash: yLuxC1AtF9CJMNubF_D7VH8MdElyNmQE1JNlL5d1xDo
 id: node.news.default
@@ -60,33 +126,39 @@ targetEntityType: node
 bundle: news
 mode: default
 content:
+  body:
+    type: text_textarea_with_summary
+    weight: 4
+    region: content
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
+  content_hierarchy:
+    type: content_hierarchy_modal
+    weight: 16
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 2
+    weight: 21
     region: content
     settings:
       rows: 3
       placeholder: ''
     third_party_settings: {  }
-  field_graphics:
-    type: entity_reference_autocomplete
-    weight: 101
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_header:
+  field_factboxes:
     type: paragraphs_classic_asymmetric
-    weight: 17
+    weight: 26
     region: content
     settings:
       title: Paragraph
@@ -95,6 +167,13 @@ content:
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: ''
+    third_party_settings: {  }
+  field_graphics:
+    type: media_library_widget
+    weight: 3
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   field_hide_breadcrumb:
     type: boolean_checkbox
@@ -105,17 +184,28 @@ content:
     third_party_settings: {  }
   field_list_media:
     type: media_library_widget
-    weight: 3
+    weight: 22
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 14
+    weight: 12
     region: content
     settings:
       sidebar: true
+      use_details: true
+    third_party_settings: {  }
+  field_news_inspiration:
+    type: entity_reference_autocomplete
+    weight: 18
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
@@ -126,33 +216,33 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 9
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 13
+    weight: 11
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 10
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -172,7 +262,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -181,11 +271,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  body: true
+  field_header: true
   field_hide_title: true
   layout_builder__layout: true
