--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.content_hierarchy
     - field.field.node.page.field_description
     - field.field.node.page.field_graphics
     - field.field.node.page.field_header
@@ -13,7 +14,9 @@ dependencies:
     - field.field.node.page.field_meta_tags
     - field.field.node.page.layout_builder__layout
     - node.type.page
+    - workflows.workflow.editorial
   module:
+    - content_hierarchy
     - content_moderation
     - field_group
     - media_library
@@ -59,6 +62,12 @@ targetEntityType: node
 bundle: page
 mode: default
 content:
+  content_hierarchy:
+    type: content_hierarchy_modal
+    weight: 102
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 7
