--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -4,16 +4,20 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
+    - field.field.node.news.content_hierarchy
     - field.field.node.news.field_description
+    - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
     - field.field.node.news.field_header
     - field.field.node.news.field_hide_breadcrumb
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_inspiration
     - field.field.node.news.layout_builder__layout
     - node.type.news
   module:
+    - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
     - metatag
@@ -42,9 +46,18 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_factboxes:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_graphics:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -57,6 +70,15 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  field_news_inspiration:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: simple_list
+      link: false
+    third_party_settings: {  }
+    weight: 4
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -64,6 +86,7 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   content_moderation_control: true
   field_header: true
   field_hide_breadcrumb: true
