--- a/config/sync/core.entity_view_display.node.news.search_result.yml
+++ b/config/sync/core.entity_view_display.node.news.search_result.yml
@@ -5,13 +5,16 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.news.body
+    - field.field.node.news.content_hierarchy
     - field.field.node.news.field_description
+    - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
     - field.field.node.news.field_header
     - field.field.node.news.field_hide_breadcrumb
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_inspiration
     - field.field.node.news.layout_builder__layout
     - node.type.news
   module:
@@ -49,13 +52,17 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   content_moderation_control: true
+  field_factboxes: true
   field_graphics: true
   field_header: true
   field_hide_breadcrumb: true
   field_hide_title: true
   field_list_media: true
+  field_location: true
   field_meta_tags: true
+  field_news_inspiration: true
   langcode: true
   layout_builder__layout: true
   search_api_excerpt: true
