--- a/config/sync/core.entity_view_display.node.page.search_result.yml
+++ b/config/sync/core.entity_view_display.node.page.search_result.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.page.body
+    - field.field.node.page.content_hierarchy
     - field.field.node.page.field_description
     - field.field.node.page.field_graphics
     - field.field.node.page.field_header
@@ -49,6 +50,7 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   content_moderation_control: true
   field_graphics: true
   field_header: true
