--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.content_hierarchy
     - field.field.node.page.field_description
     - field.field.node.page.field_graphics
     - field.field.node.page.field_header
@@ -28,6 +29,7 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   content_moderation_control: true
   field_description: true
   field_graphics: true
