--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,8 @@
         "drupal/mailsystem": "^4.3",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_tools": "^6.0",
         "drupal/noreferrer": "^1.0",
         "drupal/paragraphs": "^1.0",
         "drupal/paragraphs_asymmetric_translation_widgets": "^1.0@beta",
@@ -86,6 +88,7 @@
         "novicell/content_hierarchy": "^1.0",
         "novicell/drupal-premium-theme": "^1.0",
         "novicell/dynamic_key_value": "^1.0",
+        "novicell/entity_overview": "^1.1",
         "novicell/media_icons": "^1.0",
         "novicell/premium_articles": "^1.0",
         "novicell/premium_core": "^1.0",
@@ -96,8 +99,7 @@
         "novicell/styles": "^1.0",
         "oomphinc/composer-installers-extender": "^2.0",
         "vlucas/phpdotenv": "^5.3",
-        "wikimedia/composer-merge-plugin": "^2.0",
-        "novicell/entity_overview": "1.1"
+        "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
         "drupal/devel": "^4.1",
