SIS2-195: Adding news config

--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -452,5 +452,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  content_hierarchy: true
   layout_builder__layout: true
   moderation_state: true
