--- a/config/sync/core.entity_view_display.node.article.link_list.yml
+++ b/config/sync/core.entity_view_display.node.article.link_list.yml
@@ -57,6 +57,7 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   field_article_categories: true
   field_article_months: true
   field_article_type: true
