--- a/config/sync/core.entity_view_display.node.article.simple_list.yml
+++ b/config/sync/core.entity_view_display.node.article.simple_list.yml
@@ -65,6 +65,7 @@ content:
     region: content
 hidden:
   body: true
+  content_hierarchy: true
   field_article_categories: true
   field_article_months: true
   field_class: true
