--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -13,8 +13,8 @@ dependencies:
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
-    - field.field.node.news.layout_builder__layout
     - node.type.news
   module:
     - entity_reference_revisions
@@ -70,6 +70,15 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  field_news_image:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 6
+    region: content
   field_news_inspiration:
     type: entity_reference_entity_view
     label: hidden
@@ -93,5 +102,4 @@ hidden:
   field_hide_title: true
   field_list_media: true
   langcode: true
-  layout_builder__layout: true
   search_api_excerpt: true
