--- a/config/sync/core.entity_view_display.node.news.full.yml
+++ b/config/sync/core.entity_view_display.node.news.full.yml
@@ -14,17 +14,18 @@ dependencies:
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
-    - field.field.node.news.layout_builder__layout
     - node.type.news
   module:
     - layout_builder
     - layout_builder_restrictions
+    - text
     - user
 third_party_settings:
   layout_builder:
-    enabled: true
-    allow_custom: true
+    enabled: false
+    allow_custom: false
   layout_builder_restrictions:
     allowed_block_categories:
       - Block
@@ -44,15 +45,10 @@ third_party_settings:
       - Webform
       - core
     entity_view_mode_restriction:
-      allowed_layouts:
-        - layout_onecol
-        - layout_twocol_section
-        - layout_threecol_section
+      allowed_layouts: {  }
       blacklisted_blocks:
-        'Custom block types':
-          - basic
-        'Inline blocks':
-          - 'inline_block:basic'
+        'Custom block types': {  }
+        'Inline blocks': {  }
       whitelisted_blocks:
         'Chaos Tools': {  }
         'Content fields': {  }
@@ -75,12 +71,33 @@ id: node.news.full
 targetEntityType: node
 bundle: news
 mode: full
-content: {  }
+content:
+  body:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
+  field_description:
+    type: basic_string
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_news_image:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: 2_column_flex_height
+      link: false
+    third_party_settings: {  }
+    weight: 0
+    region: content
 hidden:
-  body: true
   content_hierarchy: true
   content_moderation_control: true
-  field_description: true
   field_factboxes: true
   field_graphics: true
   field_header: true
