--- a/config/sync/core.entity_view_display.node.news.inline_navigation.yml
+++ b/config/sync/core.entity_view_display.node.news.inline_navigation.yml
@@ -14,8 +14,8 @@ dependencies:
     - field.field.node.news.field_hide_title
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
+    - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
-    - field.field.node.news.layout_builder__layout
     - node.type.news
   module:
     - layout_builder
@@ -64,8 +64,8 @@ hidden:
   field_hide_breadcrumb: true
   field_hide_title: true
   field_meta_tags: true
+  field_news_image: true
   field_news_inspiration: true
   langcode: true
-  layout_builder__layout: true
   links: true
   search_api_excerpt: true
